Fixed overflow issue.

--- a/src/components/Field/Field.scss
+++ b/src/components/Field/Field.scss
@@ -75,7 +75,6 @@
   > a {
     display: block;
     @include ellipsis();
-    max-width: 300px; // TODO: fix this
   }
 }
 div > .checkbox {
